# SymEngine

./: .gitignore  CMakeLists.txt  README.md
resources/: Scene.sym  lucideSmall.ttf.sfd  resource.h  resource.rc
shaders/: csg.comp  definitions.comp  render.comp  renderOutput.comp  scene.comp  sceneSecond.comp  shapes.comp  symScene.comp  symScene.comp.spv
src/common/: IconsMaterialDesignIcons.h  config.cpp  config.h
src/editor/: CMakeLists.txt  window.cpp  window.h
src/engine/: CMakeLists.txt  SceneGraphNode.cpp  SceneGraphNode.h  Shape.h  Transform.h  camera.cpp  camera.h  engine.cpp  engine.h  logging.h  object.h  scene.cpp  scene.h  undoStack.h  window.cpp
src/engine/editor/: TextEditor.cpp  TextEditor.h  editor.cpp  editor.h  main.cpp  window.cpp  window.h
src/engine/vulkan/vkImage/: image.cpp  image.h
src/engine/vulkan/vkInit/: commands.h  compute_pipeline.cpp  compute_pipeline.h  descriptors.cpp  descriptors.h  device.h  instance.h  pipeline.cpp  pipeline.h  swapchain.h  sync.h
src/engine/vulkan/vkJob/: job.cpp  job.h
src/engine/vulkan/vkUtil/: buffer.cpp  buffer.h  frame.cpp  frame.h  memory.cpp  memory.h  queue_families.h  render_structs.h  shaders.cpp  shaders.h  single_time_commands.cpp  single_time_commands.h
tooling/: iconGenerator.ps1
